# chess-learning

./: .gitignore  CLAUDE.md  README.md  VISION.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.agents/skills/build-day-experience/reference/: mechanics-inventory.md  operator-walk.md  play-surface-rules.md
.agents/skills/create-curriculum-day/: SKILL.md
.agents/skills/create-curriculum-day/reference/: equivalence-tests.md
.agents/skills/create-curriculum-day/templates/: lesson-sheet.md
.claude/: table-of-contents.md
.claude/skills/build-day-experience/: SKILL.md
.claude/skills/build-day-experience/reference/: operator-walk.md  play-surface-rules.md
.claude/skills/create-curriculum-day/: SKILL.md
.claude/skills/create-curriculum-day/reference/: anti-patterns.md  exercise-authoring.md
.claude/skills/create-curriculum-day/templates/: lesson-sheet.md
.github/workflows/: ci.yml
crates/truth-core/: Cargo.toml
crates/truth-core/src/: engine.rs  lib.rs  scenario.rs
docs/: architecture-review.md  retention-model.md
docs/curriculum/: day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md
