[package]
name = "truth-core"
version = "0.1.0"
edition = "2021"
description = "Chess truth core: the only source of truth about chess legality, results, and goals."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shakmaty = "0.27"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
